src/snapshots/bundle_cat__tests__services_by_serial.snap
---
source: bundle-cat/src/main.rs
expression: "String::from_utf8_lossy(&sled_serial_out)"
---
dendrite
