src/snapshots/bundle_cat__tests__services_by_uuid.snap
---
source: src/lib.rs
expression: "String::from_utf8_lossy(&sled_uuid_out)"
---
nexus
ntp
sled-agent
