src/snapshots/bundle_cat__tests__sleds_incomplete_bundle.snap
---
source: src/lib.rs
expression: "String::from_utf8_lossy(&out)"
---
CUBBY	SERIAL     	ID                                  	SCRIMLET
  	BRM99990001	aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee	   false

POSSIBLY UNREACHABLE SLEDS 
CUBBY	SERIAL     	ID                                  	MISSING BUNDLE OUTPUT
  	BRM99990001	aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee	services, zones
