src/snapshots/bundle_cat__tests__zones_by_uuid.snap
---
source: src/lib.rs
expression: "String::from_utf8_lossy(&sled_uuid_out)"
---
global
oxz_nexus_b48c76b6-656f-4258-862a-4d2a2b9abfc0
oxz_ntp_b4c60b54-c6e8-40e8-90f6-57a7ee2ce107
